--- a/scss/main.css
+++ b/scss/main.css
@@ -1,9 +1,15 @@
 body {
   background-color: #19a2ae;
   background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
-  background-size: 40%,40%;
-  background-position-x: left, right;
-  background-position-y: 0%, -50%;
+  background-size: 45vh,45vh;
+  background-position-x: -20vh, 50vw;
+  background-position-y: 0vh, 60vh;
   background-repeat: no-repeat, no-repeat;
+}
+
+@media (min-width: 600px) {
+  body {
+    background-color: red;
+  }
 }
 /*# sourceMappingURL=main.css.map */
