--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,10 +5,16 @@ $background-card: blue;
 body {
     background-color: hsl(185, 75%, 39%);
     background-image: $background-image;
-    background-size: 40%,40%;
-    background-position-x: left, right;
-    background-position-y: 0%, -50%;
+    background-size: 45vh,45vh;
+    background-position-x: -20vh, 50vw;
+    background-position-y: 0vh, 60vh;
     background-repeat: no-repeat, no-repeat;
 }
+
+@media (min-width: 600px) {
+    body {
+      background-color: red;
+    }
+  }
 
 
