--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,18 +3,60 @@ $links-color: yellow;
 $background-card: blue;
 
 body {
-    background-color: hsl(185, 75%, 39%);
-    background-image: $background-image;
-    background-size: 45vh,45vh;
-    background-position-x: -20vh, 50vw;
-    background-position-y: 0vh, 60vh;
-    background-repeat: no-repeat, no-repeat;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 99.5vw;
+  height: 99vh;
+  background-color: hsl(185, 75%, 39%);
+  background-image: $background-image;
+  background-size: 90%, 90%;
+  background-position-x: -50vw, 50vw;
+  background-position-y: -20vh, 70vh;
+  background-repeat: no-repeat, no-repeat;
+  border-style: solid;
+  border-color: yellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  div {
+    background-color: white;
+    width: 30%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    img {
+      margin-top: -6vh;
+      border-style: solid;
+      border-color: white;
+      border-radius: 50%;
+      width: 8vw;
+      height: 10vh;
+    }
+
+      #top {
+        background-image: url(../images/bg-pattern-card.svg);
+        width: 100%;
+        height: 50%;
+      }
+
+      #bottom {
+        background-color: white;
+        width: 100%;
+        height: 50%;
+      }
+    }
 }
 
 @media (min-width: 600px) {
-    body {
-      background-color: red;
-    }
+  body {
+    background-color: red;
   }
+}
 
 
