--- a/scss/main.css
+++ b/scss/main.css
@@ -1,18 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
 body {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 99.5vw;
-  height: 99vh;
+  font-family: 'Kumbh Sans';
+  margin: 0;
+  max-width: 100vw;
+  height: 100vh;
   background-color: #19a2ae;
   background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
   background-size: 90%, 90%;
   background-position-x: -50vw, 50vw;
   background-position-y: -20vh, 70vh;
   background-repeat: no-repeat, no-repeat;
-  border-style: solid;
-  border-color: yellow;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,10 +21,27 @@ body {
           align-items: center;
 }
 
-body div {
-  background-color: white;
-  width: 30%;
-  height: 50%;
+#main {
+  width: 70vw;
+  height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#top {
+  background-image: url(../images/bg-pattern-card.svg);
+  max-width: 100%;
+  height: 30%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+#bottom {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,35 +52,93 @@ body div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  background-color: white;
+  max-width: 100%;
+  height: 70%;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-body div img {
-  margin-top: -6vh;
+img {
   border-style: solid;
   border-color: white;
   border-radius: 50%;
-  width: 8vw;
-  height: 10vh;
+  width: 25%;
+  margin-top: -12%;
 }
 
-body div #top {
-  background-image: url(../images/bg-pattern-card.svg);
+#personal-information {
+  width: 55%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+#name, #age {
+  padding: 0;
+}
+
+hr {
   width: 100%;
-  height: 50%;
+  opacity: .2;
 }
 
-body div #bottom {
-  background-color: white;
+#name, b {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+#city, #age {
+  font-weight: 400;
+}
+
+#stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 100%;
-  height: 50%;
 }
 
-@media (min-width: 600px) {
+#stats div {
+  text-align: center;
+}
+
+@media (min-width: 1280px) {
   body {
-    background-color: red;
+    background-position-x: -40vw, 40vw;
+    background-position-y: -85vh, 50vh;
+  }
+  #main {
+    width: 28%;
+    height: 45%;
+  }
+  #top {
+    height: 35%;
+  }
+  #bottom {
+    height: 65%;
+  }
+  #stats {
+    margin-top: 5%;
+  }
+}
+
+@media (min-height: 800px) {
+  #main {
+    height: 45%;
   }
 }
 /*# sourceMappingURL=main.css.map */
