--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,62 +1,125 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
 $background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
 $links-color: yellow; 
 $background-card: blue;
 
 body {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 99.5vw;
-  height: 99vh;
+  font-family: 'Kumbh Sans';
+  margin: 0;
+  max-width: 100vw;
+  height: 100vh;
   background-color: hsl(185, 75%, 39%);
   background-image: $background-image;
   background-size: 90%, 90%;
   background-position-x: -50vw, 50vw;
   background-position-y: -20vh, 70vh;
   background-repeat: no-repeat, no-repeat;
-  border-style: solid;
-  border-color: yellow;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  div {
-    background-color: white;
-    width: 30%;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-
-    img {
-      margin-top: -6vh;
-      border-style: solid;
-      border-color: white;
-      border-radius: 50%;
-      width: 8vw;
-      height: 10vh;
-    }
-
-      #top {
-        background-image: url(../images/bg-pattern-card.svg);
-        width: 100%;
-        height: 50%;
-      }
-
-      #bottom {
-        background-color: white;
-        width: 100%;
-        height: 50%;
-      }
-    }
 }
 
-@media (min-width: 600px) {
+#main {
+  width: 70vw;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+}
+
+#top {
+  background-image: url(../images/bg-pattern-card.svg);
+  max-width: 100%;
+  height: 30%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+#bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  max-width: 100%;
+  height: 70%;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+
+img {
+  border-style: solid;
+  border-color: white;
+  border-radius: 50%;
+  width: 25%;
+  margin-top: -12%;
+}
+
+#personal-information {
+  width: 55%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#name, #age {
+  padding: 0;
+}
+
+hr {
+  width: 100%;
+  opacity: .2;
+}
+
+#name, b {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+#city, #age{
+  font-weight: 400;
+}
+
+#stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+  
+  div {
+    text-align: center;
+  }
+
+}
+
+@media (min-width: 1280px) {
   body {
-    background-color: red;
+    background-position-x: -40vw, 40vw;
+    background-position-y: -85vh, 50vh;
+  }
+
+  #main {
+    width: 28%;
+    height: 45%;
+  }
+
+  #top {
+    height: 35%;
+  }
+  
+  #bottom {
+    height: 65%;
+  }
+
+  #stats {
+    margin-top: 5%;
+  }
+
+}
+
+@media (min-height: 800px){
+  
+  #main {
+    height: 45%;
   }
 }
-
-
