--- a/scss/main.css
+++ b/scss/main.css
@@ -13,6 +13,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -114,6 +120,16 @@ hr {
 
 #stats div {
   text-align: center;
+}
+
+.attribution {
+  margin-top: 15%;
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: #3e52a3;
 }
 
 @media (min-width: 1280px) {
