--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,8 @@ body {
   background-position-y: -20vh, 70vh;
   background-repeat: no-repeat, no-repeat;
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
@@ -86,10 +88,20 @@ hr {
   justify-content: space-evenly;
   width: 100%;
   
-  div {
-    text-align: center;
+  div { 
+    text-align: center; 
   }
 
+}
+
+.attribution { 
+  margin-top: 15%;
+  font-size: 11px; 
+  text-align: center; 
+}
+
+.attribution a { 
+  color: hsl(228, 45%, 44%); 
 }
 
 @media (min-width: 1280px) {
