--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
-$background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
-$links-color: yellow; 
-$background-card: blue;
-
 body {
   font-family: 'Kumbh Sans';
   margin: 0;
   max-width: 100vw;
   height: 100vh;
   background-color: hsl(185, 75%, 39%);
-  background-image: $background-image;
+  background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
   background-size: 90%, 90%;
   background-position-x: -50vw, 50vw;
   background-position-y: -20vh, 70vh;
@@ -68,6 +64,11 @@ img {
   padding: 0;
 }
 
+#city, #age{
+  font-weight: 400;
+}
+
+
 hr {
   width: 100%;
   opacity: .2;
@@ -76,10 +77,6 @@ hr {
 #name, b {
   font-size: 18px;
   font-weight: 700;
-}
-
-#city, #age{
-  font-weight: 400;
 }
 
 #stats {
