--- a/scss/main.css
+++ b/scss/main.css
@@ -160,11 +160,12 @@ hr {
 
 @media (max-height: 768px) and (min-width: 1336px) {
   body {
+    background-color: red;
     background-position-x: -45vw, 38vw;
     background-position-y: -110vh, 50vh;
   }
   #main {
-    height: 65%;
+    height: 60%;
     width: 25%;
   }
   .attribution {
