--- a/scss/main.css
+++ b/scss/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap");
 body {
   font-family: 'Kumbh Sans';
   margin: 0;
@@ -17,8 +17,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -29,7 +27,7 @@ body {
 
 #main {
   width: 70vw;
-  height: 50vh;
+  height: 43vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -42,7 +40,7 @@ body {
 #top {
   background-image: url(../images/bg-pattern-card.svg);
   max-width: 100%;
-  height: 30%;
+  height: 35%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -60,7 +58,7 @@ body {
           align-items: center;
   background-color: white;
   max-width: 100%;
-  height: 70%;
+  height: 65%;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -74,6 +72,7 @@ img {
 }
 
 #personal-information {
+  margin-top: 3%;
   width: 55%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -90,8 +89,12 @@ img {
   padding: 0;
 }
 
-#city, #age {
-  font-weight: 400;
+#city {
+  margin-top: 5%;
+}
+
+#city, #age, #stats div span {
+  font-weight: 300;
 }
 
 hr {
@@ -116,10 +119,27 @@ hr {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   width: 100%;
+  margin-top: 3%;
 }
 
 #stats div {
-  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#stats div span {
+  margin-top: 20%;
 }
 
 .attribution {
@@ -139,16 +159,7 @@ hr {
   }
   #main {
     width: 28%;
-    height: 45%;
-  }
-  #top {
-    height: 35%;
-  }
-  #bottom {
-    height: 65%;
-  }
-  #stats {
-    margin-top: 5%;
+    height: 32%;
   }
 }
 
@@ -164,14 +175,25 @@ hr {
     background-position-y: -110vh, 50vh;
   }
   #main {
-    height: 60%;
-    width: 25%;
-  }
-  #stats {
-    margin-top: 0%;
+    height: 48%;
+    width: 23%;
   }
   .attribution {
     margin-top: 5%;
+  }
+}
+
+@media (max-width: 490px) and (min-height: 800px) {
+  #main {
+    width: 65vw;
+    height: 35vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=main.css.map */
