--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
 
 body {
   font-family: 'Kumbh Sans';
@@ -13,14 +13,13 @@ body {
   background-repeat: no-repeat, no-repeat;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
 
 #main {
   width: 70vw;
-  height: 50vh;
+  height: 43vh;
   display: flex;
   flex-direction: column;
 }
@@ -28,7 +27,7 @@ body {
 #top {
   background-image: url(../images/bg-pattern-card.svg);
   max-width: 100%;
-  height: 30%;
+  height: 35%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -39,7 +38,7 @@ body {
   align-items: center;
   background-color: white;
   max-width: 100%;
-  height: 70%;
+  height: 65%;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -54,6 +53,7 @@ img {
 }
 
 #personal-information {
+  margin-top: 3%;
   width: 55%;
   display: flex;
   align-items: center;
@@ -64,8 +64,12 @@ img {
   padding: 0;
 }
 
-#city, #age{
-  font-weight: 400;
+#city {
+  margin-top: 5%;
+}
+
+#city, #age, #stats div span{
+  font-weight: 300;
 }
 
 hr {
@@ -83,9 +87,18 @@ hr {
   flex-direction: row;
   justify-content: space-evenly;
   width: 100%;
+  margin-top: 3%;
   
   div { 
-    text-align: center; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    span {
+      margin-top: 20%;
+    }
+
   }
 
 }
@@ -108,19 +121,7 @@ hr {
 
   #main {
     width: 28%;
-    height: 45%;
-  }
-
-  #top {
-    height: 35%;
-  }
-  
-  #bottom {
-    height: 65%;
-  }
-
-  #stats {
-    margin-top: 5%;
+    height: 32%;
   }
 
 }
@@ -140,15 +141,22 @@ hr {
   }
 
   #main {
-    height: 60%;
-    width: 25%;
-  }
-
-  #stats {
-    margin-top: 0%;
+    height: 48%;
+    width: 23%;
   }
 
   .attribution { 
     margin-top: 5%;
   }
+}
+
+@media (max-width: 490px) and (min-height: 800px) {
+  
+  #main {
+    width: 65vw;
+    height: 35vh;
+    display: flex;
+    flex-direction: column;
+  }
+    
 }
